# chap_pymc

./: .gitignore  .pre-commit-config.yaml  MLproject  ar_debugging.py  chap_config.yml  claude.md  debugging.ipynb  example.py  extension.py  main.py  plotting.py  pyenv.yaml  pyproject.toml  real_config.yaml  test_config.yaml  util.py
.claude/commands/: jira.md
.github/workflows/: type-check.yml
apps/: season_standarization.py
chap_pymc/: conftest.py  correlation_plots.py  dataset_plots.py  extension.py  inference_params.py  mcmc_params.py  model_input_creator.py  plotting.py  prediction_investigation.ipynb  season_correlation.py  season_plot.py  seasonal_transform.py  util.py  yearly_regression.py
chap_pymc/configs/: chap_config.py  nepal.json
chap_pymc/curve_parametrizations/: __init__.py  fourier_parametrization.py  fourier_parametrization_plots.py  test_fourier_parametrization.py
chap_pymc/example_dataset_plots/: seasonality_plot.py
chap_pymc/models/: kmer_model.py  loc_scale_finder.py  model_with_dimensions.py  seasonal_fourier_regression.py  seasonal_regression.py  test_seasonal_fourier_regression.py
chap_pymc/transformations/: model_input_creator.py  seasonal_transform.py  seasonal_xarray.py
configurations/: ar_config.json  ar_config.yaml  nepal_config.yaml
examples/: ar_debugging.py  seasonal_regression_cli.py
notebooks/: debugging.ipynb  multivariate.py.ipynb  non_centered_dbg.ipynb
per_season/: yearly_pattern.py
plotting_examples/: confidence_plot.py
tests/: conftest.py  test_configs.py  test_main.py
tests/curve_parametrizations/: test_fourier_parametrization.py
tests/fixtures/config/: debug_config.yaml
tests/fixtures/data/: colombia.csv  laos.csv  thailand.csv  training_data.csv  vietnam.csv
tests/models/: test_example_temporal_model.py  test_loc_scale_finder.py  test_seasonal_fourier_regression.py
tests/transformations/: test_model_input_creator_v2.py  test_seasonal_xarray.py
