[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chap-pymc"
version = "0.1.0"
description = "Spatio-temporal modeling framework using PyMC for epidemiological forecasting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.12"
dependencies = [
    "pymc>=5.0.0",
    "pytensor>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "arviz>=0.15.0",
    "cyclopts>=2.0.0",
    "pyyaml>=6.0",
    "altair",
    "pytest>=8.4.2",
    "chap-core>=1.0.17",
    "vl-convert-python>=1.8.0",
    "vegafusion>=2.0.3",
    "pyarrow>=21.0.0",
    "ipython>=9.6.0",
    "graphviz>=0.21",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-parametrize>=1.0.0",

]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-parametrize>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
chap-pymc = "example:app"

[project.urls]
Homepage = "https://github.com/yourusername/chap-pymc"
Repository = "https://github.com/yourusername/chap-pymc.git"
Issues = "https://github.com/yourusername/chap-pymc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "__pycache__*", "*.egg-info*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"
timeout = 10
markers = [
    "parametrize: marks tests as parametrized",
    "slow: marks tests as slow (deselected by default)",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Start with gradual typing - will enable per-module as files are typed
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["tests/", "examples/"]

[[tool.mypy.overrides]]
module = [
    "pymc.*",
    "pytensor.*",
    "arviz.*",
    "cyclopts.*",
    "chap_core.*",
    "scipy.*",
    "altair.*",
    "vl_convert",
]
ignore_missing_imports = true

# Strict typing for fully typed modules
[[tool.mypy.overrides]]
module = [
    "chap_pymc.inference_params",
    "chap_pymc.model_input_creator",
    "chap_pymc.seasonal_transform",
    "chap_pymc.curve_parametrizations.fourier_parametrization",
    "chap_pymc.models.seasonal_fourier_regression",
    "chap_pymc.models.model_with_dimensions",
    "chap_pymc.models.seasonal_regression",
    "chap_pymc.models.loc_scale_finder",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.2.250926",
    "pytest-timeout>=2.4.0",
    "types-pyyaml>=6.0.12.20250915",
]
